2024-05-08 24
  * added support to create PAR2 checksum files
  * integrated libisofs: create ISO 9660 images without external
    tools. Used when --(cd|dvd|bd)-image-command are not set
    (empty)
  * integrated libburn: write CD/DVD/BD without external tools.
    Used when --(cd|dvd|bd)-[write|write-image|load-volume|
    unload-volume]-command are not set (empty)

2024-03-28 23b
  * fixed write CD/DVD/BD
  * added verify CD/DVD/BD: growisofs does not always return
    an exit code on failure. Thus read the data back which was
    just written and compare.
  * BARControl: fixed request CD/DVD/BD volume
  * BARControl: improved CD/DVD/BD messages

2024-01-27 23a
  * fixed scheduler trigger job, check time (1min instead every
    10s)
  * BARControl: fixed option --index-database-entries-list:
    also list storages
  * BARControl: added options --long-format, --no-header-footer
  * BARControl: fixed sort job list

2024-01-14 23
  * changed version number scheme: single number
  * added support for storing on Samba/CIFS server
  * added execute ECC commands for device
  * experimental Windows support!
  * convert character encoding of file names always to
    UTF-8 (required on Windows and none UTF-8 systems)
  * always store text UTF-8 encoded
  * added options --system-encoding, --console-encoding,
    --force-console-encoding
  * added macro pre/post command macros %nextJobName,
    %nextJobUUID, %nextScheduleUUID, %nextSchedule,
    %nextScheduleDateTime, %nextScheduleUUID
  * upgrade zlib 1.3
  * upgrade libidn2 2.3.4
  * upgrade nettle 3.9.1
  * upgrade c-ares 1.20.1
  * upgrade build pipeline for Debian 10
  * upgrade RPM build environment to CentOS 7
  * upgrade ICU 61.1
  * BARControl: renamed option --list -> --list-jobs
  * BARControl: added option --list-schedules
  * fixed image pre/post commands for CD/DVD/BD
  * fixed image pre/post commands for device
  * fixed bar-index --pipe
  * fixed reserved keyword in MariaDB: offset