@@ -1,3 +1,6 @@
+2024-06-09 24a
+  * fixed long blocking of database at clean
+
 2024-05-08 24
   * added support to create PAR2 checksum files
   * integrated libisofs: create ISO 9660 images without external
